--- a/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
+++ b/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
@@ -1,1 +1,263 @@
-<p>entities-list works!</p>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Trang chủ <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Tin tức</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Về chúng tôi</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Liên Hệ</a>
+      </li>
+    </ul>
+    <div class="dropleft">
+      <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">Putin <i class="fa-solid fa-circle-user"></i></button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
+      </div>
+    </div>
+  </div>
+</nav>
+<div class="container-fluid" id="content">
+  <div class="row">
+    <div class="col-lg-2 ml-0">
+      <!-- Sidebar -->
+      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 260px; height: 1000px;">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+          <svg class="bi me-2" width="40" height="32">
+            <use xlink:href="#bootstrap"/>
+          </svg>
+          <span class="fs-4"><strong>Quản lý hệ thống</strong></span>
+        </a>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto">
+          <li class="nav-item">
+            <a href="#" class="nav-link active" aria-current="page">
+              <svg class="bi me-2" width="16" height="16">
+                <use xlink:href="#home"/>
+              </svg>
+              Quản lý cá thể
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link link-dark">
+              <svg class="bi me-2" width="16" height="16">
+                <use xlink:href="#speedometer2"/>
+              </svg>
+              Quản lý thông báo
+            </a>
+          </li>
+
+        </ul>
+        <hr>
+
+        <!-- Sidebar -->
+      </div>
+    </div>
+    <div class="col-lg-10 ">
+      <div class="card shadow ">
+        <div class="card-header py-3">
+          <div class="d-flex flex-row  d-flex justify-content-center">
+            <div class="col-6">
+              <div class="input-group">
+                <!--                <div class="form-outline">-->
+                <!--                  <input id="search-focus" type="search" id="form1" class="form-control" placeholder="Nhập mã cá thể" />-->
+
+                <!--                </div>-->
+                <!--                <button type="button" class="btn btn-primary">-->
+                <!--                  Tìm kiếm-->
+                <!--                </button>-->
+                <div class="form-outline">
+                  <input type="search" class="form-control" [(ngModel)]="inDate"
+                         placeholder="Nhập ngày vào"/>
+                </div>
+                <div class="form-outline"style="margin-left: 10px;" >
+                  <input type="search" class="form-control" [(ngModel)]="cage"
+                         placeholder="Nhập mã chuồng nuôi"/>
+                </div>
+                <button type="submit" class="btn btn-primary" (click)="search()" style="margin-left: 10px;">
+                  Tìm kiếm
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="isSubmitted then submited else notSubmited"></div>
+        <ng-template #notSubmited>
+          <h3>Không có kết quả nào để hiển thị</h3>
+        </ng-template>
+        <ng-template #submited>
+          <h1>Tìm ra kết quả</h1>
+        </ng-template>
+
+
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+              <thead>
+              <tr>
+                <th>Mã lợn</th>
+                <th>Mã chuồng nuôi</th>
+                <th>Ngày nhập chuồng</th>
+                <th>Ngày xuất chuồng</th>
+                <th>Tình trạng</th>
+                <th>Cân nặng(kg)</th>
+                <th>Sửa</th>
+                <th>Xoá</th>
+
+              </tr>
+              </thead>
+
+              <tbody>
+              <tr *ngFor="let entity of entities2">
+                <td>{{entity.entitiesId}}</td>
+                <td>{{entity.cageId}}</td>
+                <td>{{entity.inDate}}</td>
+                <td>{{entity.outDate}}</td>
+                <td>{{entity.status}}</td>
+                <td>{{entity.weight}}</td>
+
+                <td>
+                  <button class="btn" [routerLink]="['update/'+entity.entitiesId]"><i class="fa-solid fa-pen-clip"
+                                                                          style="color: blue;"></i></button>
+                </td>
+                <!--                <td>-->
+                <!--                  -->
+                <!--                  <i class="fa-solid fa-trash-can" style="color: red;"></i>-->
+                <!--                </td>-->
+                <td>
+                  <button class="btn" [routerLink]="['delete/'+entity.entitiesId]"><i class="fa-solid fa-trash-can"
+                                                                                      style="color: red;"></i></button>
+                </td>
+
+              </tr>
+
+              </tbody>
+            </table>
+          </div>
+          <div class="row">
+            <div class="col-sm-12 col-md-5">
+              <a href="/entities/create">
+                <button class="btn btn-primary">Khởi tạo</button>
+              </a>
+            </div>
+            <div class="col-sm-12 col-md-7">
+              <div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate">
+
+                <ul class="nav nav-pills">
+                  <!--                  <div>-->
+                  <!--                    <a href="@{'/customers'(page=${customers.number - 1})}" if="${customers.hasPrevious()}">Previous</a>-->
+                  <!--                    <span text="${customers.number + 1}"></span>/<span text="${customers.totalPages}"></span>-->
+                  <!--                    <a href="@{'/customers'(page=${customers.number + 1})}" if="${customers.hasNext()}">Next</a>-->
+                  <!--                  </div>-->
+                  <li class="nav-item" *ngFor="let p of pages;let i=index">
+                    <!--                    <a class="nav-link " href="" (click)="setPage(i,$event)">{{i+1}}Trước</a>-->
+                    <a class="nav-link " href="" (click)="setPage(i,$event)">{{i + 1}}</a>
+                  </li>
+                </ul>
+
+
+                <!--                <ul class="pagination"><li class="paginate_button page-item previous" id="dataTable_previous">-->
+                <!--                  <a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Trước</a>-->
+                <!--                </li>-->
+                <!--                  <li class="paginate_button page-item ">-->
+                <!--                    <a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a>-->
+                <!--                  </li>-->
+                <!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a>-->
+                <!--                  </li>-->
+                <!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a>-->
+                <!--                  </li>-->
+                <!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a>-->
+                <!--                  </li>-->
+                <!--                  <li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a>-->
+                <!--                  </li>-->
+                <!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next">-->
+
+                <!--                    <a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Sau</a>-->
+                <!--                  </li>-->
+                <!--                </ul>-->
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<footer class="">
+  <div class="container py-5">
+    <div class="row py-4">
+      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
+        <p class="font-italic text-muted">Kết nối với chúng tôi.</p>
+        <ul class="list-inline mt-4">
+          <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i
+            class="fa fa-twitter i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i
+            class="fa fa-facebook i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i
+            class="fa fa-instagram i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i
+            class="fa fa-pinterest i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i
+            class="fa fa-vimeo i-footer"></i></a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Sản phẩm</h6>
+        <ul class="list-unstyled mb-0">
+          <li class="mb-2"><a href="#" class="text-muted">Thức Ăn</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Thuốc</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Giống</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Cá Thể</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Hệ thống</h6>
+        <ul class="list-unstyled mb-0">
+          <li class="mb-2"><a href="#" class="text-muted">Đăng nhập</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Đăn ký</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Gửi ý kiến</h6>
+        <p class="text-muted mb-4">Mọi thắc mắc xin liên hệ cho chúng tôi.</p>
+        <div class="p-1 rounded border">
+          <div class="input-group">
+            <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1"
+                   class="form-control border-0 shadow-0">
+            <div class="input-group-append">
+              <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Copyrights -->
+  <div class="bg-light py-4">
+    <div class="container text-center">
+      <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>
+    </div>
+  </div>
+</footer>
+</body>
