--- a/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
+++ b/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
@@ -100,16 +100,21 @@
           </div>
         </div>
 
-        <div *ngIf="isSubmitted then submited else notSubmited"></div>
-        <ng-template #notSubmited>
-          <h3>Không có kết quả nào để hiển thị</h3>
-        </ng-template>
-        <ng-template #submited>
-          <h1>Tìm ra kết quả</h1>
-        </ng-template>
+        <div *ngIf="isTrue">
+          <div *ngIf="isSubmitted then submited else notSubmited"></div>
+          <ng-template #notSubmited>
+            <h5>Không có kết quả nào để hiển thị</h5>
+          </ng-template>
+          <ng-template #submited>
+            <h5></h5>
+          </ng-template>
+
+        </div>
 
 
-        <div class="card-body">
+
+
+        <div class="card-body" *ngIf="isTrue2">
           <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
               <thead>
@@ -168,9 +173,9 @@
                   <!--                    <span text="${customers.number + 1}"></span>/<span text="${customers.totalPages}"></span>-->
                   <!--                    <a href="@{'/customers'(page=${customers.number + 1})}" if="${customers.hasNext()}">Next</a>-->
                   <!--                  </div>-->
-                  <li class="nav-item" *ngFor="let p of pages;let i=index">
+                  <li class="nav-item" *ngFor="let p of pages;let i=index" >
                     <!--                    <a class="nav-link " href="" (click)="setPage(i,$event)">{{i+1}}Trước</a>-->
-                    <a class="nav-link " href="" (click)="setPage(i,$event)">{{i + 1}}</a>
+                    <a class="nav-link " href="" (click)="setPage(i,$event)" >{{i + 1}}</a>
                   </li>
                 </ul>
 
